# smarthome-galoped-dekad

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  notes.txt
article/: habr.md  mysku.html  reddit.md
case/: .xdp-arrow.FCStd.0f91ba84-691e-4809-8530-f200fce013ba-cSgGzg  .xdp-arrow.FCStd.5ef01958-e289-44b4-9a6c-715f347838d2-yxWRIn  .xdp-front.FCStd.77184b65-a874-4633-b3b1-d4450107372a-YxRU38  .xdp-front.FCStd.e1d940d4-c319-4fb9-9c7f-a22cbc1b8970-khekGJ  Galoped-case.FCStd  Galoped-case.FCStd1  Usb-conn.FCStd  arrow-2mm.stl  arrow-box-2mm-hole-1.6mm.stl  arrow-box-2mm-hole-1.7mm.stl  arrow-box-2mm-hole-1.8mm.stl  arrow-cap.FCStd  arrow-retro.FCStd  arrow-retro.stl  arrow.stl  arrow2-retro.FCStd  arrow2-retro.stl  arrow2.FCStd  arrow2.stl  back-climate.stl  back-s8.stl  back.FCStd  back.stl  board.FCStd  dekad-assembly.FCStd  dekad-case.FCStd  dekad-glass.FCStd  drive-backplate.FCStd  front-prototype.FCStd  front-prototype.step  front-prototype.stl  front-v2.FCStd  front-v2.stl  front.FCStd  front.stl  holes-test.FCStd  ring-rgb-cap.stl  ring-rgb.FCStd  ring-rgb.step  ring-rgb.stl  (+4 more)
doc/: assembly.md  device-3dp.md  device-co2.md  fw-command.md
firmware/: fram.be  (+10 more)
firmware-wifi/: user_config_esp32-biax.h  user_config_esp32-retro.h  user_config_esp32-rgb.h  (+2 more)
firmware-zigbee/galoped/main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.cpp  button.h  climate_sensor.cpp  climate_sensor.h  esp_zb_light.c  esp_zb_light.h  galoped.cpp  idf_component.yml  light_driver.c  light_driver.h  rgb_led.cpp  rgb_led.h  senseair_s8.cpp  senseair_s8.h
(+75 files in other folders)
